--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@supabase/supabase-js": "^2.39.3",
     "@types/leaflet": "^1.9.20",
     "@upstash/ratelimit": "^2.0.6",
