--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.15",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.3",
     "@types/leaflet": "^1.9.20",
