--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "crons": [
     {
       "path": "/api/agent/cron",
-      "schedule": "*/15 * * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
+
