--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,7 @@
     "framer-motion": "^12.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.463.0",
-    "next": "15.4.5",
+    "next": "^15.5.2",
     "openai": "^4.20.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
